--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 	},
 	"dependencies": {
 		"@astrojs/mdx": "^0.17.2",
+		"@astrojs/node": "^8.3.4",
 		"@astrojs/rss": "^2.1.1",
 		"@astrojs/sitemap": "^1.1.0",
-		"astro": "^2.0.17"
+		"astro": "^4.16.10"
 	}
 }
