--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@astrojs/mdx": "^0.17.2",
 		"@astrojs/rss": "^2.1.1",
 		"@astrojs/sitemap": "^1.1.0",
-		"astro": "^2.0.17"
+		"astro": "^2.0.17",
+		"sharp": "^0.33.5"
 	}
 }
