--- a/.netlify/v1/config.json
+++ b/.netlify/v1/config.json
@@ -1,1 +1,1 @@
-{"images":{"remote_images":[]},"headers":[{"for":"/astro-blog-site/_astro/*","values":{"Cache-Control":"public, max-age=31536000, immutable"}}]}
+{"images":{"remote_images":[]},"headers":[{"for":"/_astro/*","values":{"Cache-Control":"public, max-age=31536000, immutable"}}]}
